shoppingapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-api
  
  template:
    metadata:
      labels:
        app: shopping-api
    
    spec:
      containers:
      - name: shopping-api
  
        image: shopping-api:v1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
